Scafold de produtos

--- a/AppMvcBasico/Views/Fornecedores/Index.cshtml
+++ b/AppMvcBasico/Views/Fornecedores/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<AppMvcBasico.Models.Fornecedor>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Lista de Fornecedores";
 }
 
 <h1>Index</h1>
